# PyLittle

./: .gitignore  CMakeLists.txt  LICENSE  README.md  runwebdock.txt
.github/workflows/: ci.yml
backends/cpu/: CMakeLists.txt  cpu_backend.cpp
backends/cuda/: CMakeLists.txt  cuda_backend.cu
backends/vulkan/: CMakeLists.txt  vulkan_backend.cpp
bindings/: CMakeLists.txt  pybind_module.cpp
core/: CMakeLists.txt
core/include/pylittle/: backend_iface.h  engine.h  kv_pager.h  memory_manager.h  quant.h
core/src/: engine.cpp  kv_pager.cpp  memory_manager.cpp  quant.cpp
docs/: api.md  architecture.md  how_to_build.md
examples/: hf_inference_adapter.py  simple_infer.py
outputs/: long_sweep_smoke.jsonl  long_sweep_smoke2.jsonl  pcie_microbench_cache.json
python/: README.md  pyproject.toml  setup.cfg
python/pylittle/: __init__.py  api.py  cli.py  config.py  memory.py
python/pylittle/adapters/: hf_adapter.py  hf_runtime.py  torch_adapter.py
python/pylittle/tools/: demo_kv_paging.py  demo_native_mm.py
python/pylittle/utils/: benchmark.py  hw_probe.py  logging.py  metrics.py  pcie_microbench.py  simulate.py
python/tests/: test_basic.py  test_memory_manager.py
scripts/: build_native_windows.ps1
tests/: integration_hf_adapter.py  integration_smoke_test.py
tools/: bench.py  bench_hf_vs_pylittle.py  bench_long_prompt_sweep.py  convert_model.py  demo_kv_window.py  demo_native_mm.py  demo_overlap.py  gui_bench_report.py  quantize_tool.py
tools/webdash/: server.py
tools/webdash/static/: main.js  style.css
tools/webdash/templates/: index.html
