# Try to locate pybind11 inside venv's site-packages
if(DEFINED ENV{VIRTUAL_ENV})
	set(_PYBIND_HINT "$ENV{VIRTUAL_ENV}/Lib/site-packages/pybind11/share/cmake/pybind11")
	if(EXISTS ${_PYBIND_HINT}/pybind11Config.cmake)
		list(APPEND CMAKE_PREFIX_PATH ${_PYBIND_HINT})
	endif()
endif()
find_package(pybind11 CONFIG QUIET)
if(pybind11_FOUND)
	pybind11_add_module(_pylittle MODULE pybind_module.cpp)
	target_link_libraries(_pylittle PRIVATE pylittle_core)
	target_include_directories(_pylittle PRIVATE ${PROJECT_SOURCE_DIR}/core/include)
else()
	message(STATUS "pybind11 not found; skipping Python bindings")
endif()
